# tlog

./: .gitignore  Cargo.toml  Makefile  README.md  domain-model.md  prd.md  screens-and-flows.md  system-design.md
specs/: 01-PRD.md  02-domain-model.md  03-system-design.md  04-screens-and-flows.md  05-endpoints.md
src/: auth.rs  db.rs  env.rs  jwt.rs  lib.rs  main.rs  routes.rs
src/db/: schema.sql
src/routes/: api.rs  app.rs
src/routes/api/: auth.rs  supervisor.rs  sysadmin.rs  worker.rs
src/routes/app/: change_password.rs  login.rs  resources.rs  supervisor.rs  sysadmin.rs  worker.rs
static/login/: index.html  script.js  styles.css
static/supervisor/: index.html  styles.css
static/worker/: index.html  script.js  styles.css
