[package]
name = "tlog"
version = "0.0.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
jsonwebtoken = "10.3.0"
serde = "1.0.228"
tokio = { version = "1.50.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.8", features = ["cors", "fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
